--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>93N</title>
+    <title>PG</title>
     <script src="https://aloycwl.github.io/js/cdn/jquery.min.js"></script>
     <script src="https://aloycwl.github.io/js/cdn/web3.min.js"></script>
     <script src="https://aloycwl.github.io/js/cdn/web3ac.js"></script>
@@ -16,10 +16,8 @@
     <a id="connect" onclick="connect()">Connect</a>
     <div id="root" class="hide">
       <i id="status">Status...</i><br /><br />
-      Claim MOCK-USDT to deposit -
-      <a onclick="claim()">Here</a><br />
       Your USDT Token: <span id="txtUSDT"></span><br />
-      Your 93N Token: <span id="txt93N"></span> <br /><br />
+      Your PG Token: <span id="txtPG"></span> <br /><br />
       Referred by: <span id="txtRB"></span><br />
       <a
         id="txtRef"
