--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         >Your referral link - Click to copy</a
       >
       <br /><br />
-      <button>5,000</button> <button>10,000</button> <button>50,000</button>
-      <button>100,000</button>
+      <button onclick="deposit(5)">5,000</button>
+      <button onclick="deposit(10)">10,000</button>
+      <button onclick="deposit(50)">50,000</button>
+      <button onclick="deposit(100)">100,000</button>
     </div>
   </body>
 </html>
