--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://aloycwl.github.io/js/cdn/jquery.min.js"></script>
     <script src="https://aloycwl.github.io/js/cdn/web3.min.js"></script>
     <script src="https://aloycwl.github.io/js/cdn/web3ac.js"></script>
-    <script src="pg.js"></script>
+    <script src="rg.js"></script>
     <style>
       .hide {
         display: none;
