--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         >Your referral link - Click to copy</a
       >
       <br /><br />
-      <button onclick="deposit(5)">5,000</button>
-      <button onclick="deposit(10)">10,000</button>
-      <button onclick="deposit(50)">50,000</button>
-      <button onclick="deposit(100)">100,000</button>
+      <button onclick="mint()">Mint (1,000 USDT)</button>
     </div>
   </body>
 </html>
