--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="root" class="hide">
       <i id="status">Status...</i><br /><br />
       Your USDT Token: <span id="txtUSDT"></span><br />
-      Your PG Token: <span id="txtPG"></span> <br /><br />
+      Your RG Token: <span id="txtRG"></span> <br /><br />
       Referred by: <span id="txtRB"></span><br />
       <a
         id="txtRef"
