--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       >
       <br /><br />
       <button onclick="mint()">Mint (1,000 USDT)</button>
+      <br /><br />
+      <button onclick="drip()">Drip</button>
     </div>
   </body>
 </html>
