--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >Your referral link - Click to copy</a
       >
       <br /><br />
-      <button onclick="mint()">Mint (1,000 USDT)</button>
+      <button onclick="mint()">Mint</button>
       <br /><br />
       <button onclick="drip()">Drip</button>
     </div>
