--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         >Your referral link - Click to copy</a
       >
       <br /><br />
+      <button onclick="amt(-1)">-</button> <input id="txtNo" value="1" />
+      <button onclick="amt(1)">+</button> <br />
       <button onclick="mint()">Mint</button>
       <br /><br />
       <button onclick="drip()">Drip</button>
