--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >Your referral link - Click to copy</a
       >
       <br /><br />
-      <button onclick="adjust(-1)">-</button> <input id="txtNo" value="1" />
+      <button onclick="adjust(-1)">-</button> <input id="txtNo" value="1" type="number" />
       <button onclick="adjust(1)">+</button> <br />
       <button onclick="mint()">Mint</button>
       <br /><br />
