--- a/test.html
+++ b/test.html
@@ -67,7 +67,11 @@
         margin: 30px 20px 30px 20px;
       }
       .adjust {
-        width: 30px;
+        width: 40px;
+      }
+      .heightPad {
+        display: block;
+        margin: 30px 0 30px 0;
       }
     </style>
   </head>
@@ -89,11 +93,9 @@
         <button onclick="adjust(-1)" class="adjust">-</button>
         <input id="txtNo" value="1" />
         <button onclick="adjust(1)" class="adjust">+</button> <br />
-        <button onclick="mint()">Presale Mint</button>
-        <br /><br />
-        <h3>Your RG Token: <span id="txtRG">00.00</span></h3>
-        <br /><br />
-        <button onclick="drip()">Claim</button><br />
+        <button id="mintBtn" onclick="mint()">Presale Mint</button>
+        <h3 class="heightPad">Your RG Token: <span id="txtRG">00.00</span></h3>
+        <button id="claimbtn" onclick="drip()">Claim</button><br />
         <br />
         <button id="txtRef" onclick="copy()">Copy Your Referral Link</button>
       </div>
