--- a/test.html
+++ b/test.html
@@ -22,15 +22,12 @@
         font-family: Roboto;
       }
       .panel {
-        display: inline-block;
         height: 100%;
         width: 50%;
         position: absolute;
-        overflow-x: hidden;
       }
       .left {
         left: 0;
-        background-color: red;
       }
       .right {
         right: 0;
@@ -101,6 +98,10 @@
       </div>
     </div>
     <div class="panel left two">asdasda</div>
-    <div class="panel right two">asdasda</div>
+    <div class="panel right two">
+      <div class="center">
+        <img src="https://action-world.github.io/Readygo/images/Picture1.png" />
+      </div>
+    </div>
   </body>
 </html>
