--- a/test.html
+++ b/test.html
@@ -70,6 +70,13 @@
         display: block;
         margin: 30px 0 30px 0;
       }
+      .colorRed {
+        color: #f44336;
+      }
+      ul {
+        text-align: left;
+        margin-top: 30px;
+      }
     </style>
   </head>
   <body>
@@ -97,7 +104,21 @@
         <button id="txtRef" onclick="copy()">Copy Your Referral Link</button>
       </div>
     </div>
-    <div class="panel left two">asdasda</div>
+    <div class="panel left two">
+      <div class="center">
+        <h3 class="colorRed">What do you get from this Presale NFT?</h3>
+        <h3>
+          <ul>
+            <li>Daily drip of 27 RG tokens for 365 days</li>
+            <li>Random rare NFT items in the game</li>
+            <li>
+              20% referral fees on introducing your friends to purchase RG NFT
+            </li>
+            <li>You will also get 1% drip from each of your referral</li>
+          </ul>
+        </h3>
+      </div>
+    </div>
     <div class="panel right two">
       <div class="center">
         <img src="https://action-world.github.io/Readygo/images/Picture1.png" />
