--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>RG</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aloycwl.github.io/js/cdn/jquery.min.js"></script>
     <script src="https://aloycwl.github.io/js/cdn/web3.min.js"></script>
     <script src="https://aloycwl.github.io/js/cdn/web3ac.js"></script>
