--- a/test.html
+++ b/test.html
@@ -80,6 +80,17 @@
       li {
         margin-top: 30px;
       }
+      @media screen and (max-width: 600px) {
+        .panel {
+          height: 100%;
+          width: 100%;
+          display: block;
+        }
+        img,
+        video {
+          max-width: 100%;
+        }
+      }
     </style>
   </head>
   <body>
