--- a/test.html
+++ b/test.html
@@ -63,8 +63,9 @@
         color: white;
       }
       input {
-        width: 50px;
+        width: 30px;
         margin: 30px 20px 30px 20px;
+        text-align: center;
       }
       .adjust {
         width: 40px;
