--- a/test.html
+++ b/test.html
@@ -62,13 +62,11 @@
         background: #f44336;
         color: white;
       }
-      input {
-        width: 30px;
-        margin: 30px 10px 30px 10px;
-        text-align: center;
-      }
+      input,
       .adjust {
-        width: 40px;
+        width: 35px;
+        margin: 30px 5px 30px 5px;
+        text-align: center;
       }
       .heightPad {
         display: block;
