--- a/test.html
+++ b/test.html
@@ -46,6 +46,7 @@
         transform: translate(-50%, -50%);
         text-align: center;
         color: white;
+        width: 100%;
       }
       button,
       input {
@@ -74,9 +75,6 @@
       }
       .colorRed {
         color: #f44336;
-      }
-      ul {
-        text-align: left;
       }
       li {
         margin-top: 30px;
