--- a/index.html
+++ b/index.html
@@ -94,15 +94,12 @@
   <body>
     <div class="panel left">
       <video loop muted autoplay playsinline>
-        <source
-          src="https://action-world.github.io/Readygo/files/face.mp4"
-          type="video/mp4"
-        />
+        <source src="asset/face.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="panel right">
       <div class="center">
-        <img src="https://action-world.github.io/Readygo/images/image.png" />
+        <img src="asset/go.png" />
         <h3>Connect to BSC Mainnet to mint</h3>
         <br />
         <h3><i>1000 BUSD each Presale NFT </i></h3>
@@ -133,7 +130,7 @@
     </div>
     <div class="panel right two">
       <div class="center">
-        <img src="https://action-world.github.io/Readygo/images/Picture1.png" />
+        <img src="asset/footer.png" />
       </div>
     </div>
   </body>
