--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <button onclick="adjust(1)" class="adjust">+</button> <br />
           <button id="mintBtn" onclick="mint()">Presale Mint</button>
           <h3 class="heightPad">
-            Your RG Token: <span id="txtRG">00.00</span>
+            Unclaimed RG Token: <span id="txtRG">00.00</span>
           </h3>
           <button id="claimbtn" onclick="drip()">Claim</button><br />
           <br />
