--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         background-color: black;
         color: #f44336;
         border-color: #f44336;
+        cursor: pointer;
       }
       button:hover {
         background: #f44336;
