1 file modified, 1 added

--- a/index.html
+++ b/index.html
@@ -11,89 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-      }
-      html,
-      body {
-        height: 100%;
-        background-color: black;
-        font-family: Roboto;
-      }
-      .panel {
-        height: 100%;
-        width: 50%;
-        position: absolute;
-      }
-      @media only screen and (min-width: 600px) {
-        .left {
-          left: 0;
-        }
-        .right {
-          right: 0;
-        }
-        .two {
-          top: 100%;
-        }
-      }
-      video,
-      .center {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        color: white;
-        width: 100%;
-      }
-      button,
-      input {
-        font-size: large;
-        padding: 5px 10px 5px 10px;
-        border-radius: 6px;
-      }
-      button {
-        background-color: black;
-        color: #f44336;
-        border-color: #f44336;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #f44336;
-        color: white;
-      }
-      input,
-      .adjust {
-        width: 35px;
-        margin: 30px 5px 30px 5px;
-        text-align: center;
-      }
-      .heightPad {
-        display: block;
-        margin: 30px 0 30px 0;
-      }
-      .colorRed {
-        color: #f44336;
-      }
-      li {
-        margin-top: 30px;
-      }
-      @media screen and (max-width: 600px) {
-        .panel {
-          width: 100%;
-          position: relative;
-        }
-        img,
-        video {
-          max-width: 100%;
-        }
-      }
-      #root {
-        display: none;
-      }
-    </style>
+    <link rel="stylesheet" href="asset/rg.css" />
   </head>
   <body>
     <div class="panel left">
