--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>RG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aloycwl.github.io/js/cdn/jquery.min.js"></script>
-    <script src="https://aloycwl.github.io/js/cdn/web3.min.js"></script>
-    <script src="https://aloycwl.github.io/js/cdn/web3ac.js"></script>
+    <script src="asset/jquery.min.js"></script>
+    <script src="asset/web3.min.js"></script>
+    <script src="asset/web3ac.js"></script>
     <script src="asset/rg.js"></script>
     <link
       rel="stylesheet"
