--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="panel left">
       <video loop muted autoplay playsinline>
         <source
-          src="https://aloycwl.github.io/rg_frontend/asset/face.mp4"
+          src="asset/face.mp4"
           type="video/mp4"
         />
       </video>
@@ -26,7 +26,7 @@
       <div class="center">
         <button id="conBtn" onclick="connect()">Connect Wallet</button>
         <div id="root">
-          <img src="https://aloycwl.github.io/rg_frontend/asset/go.png" />
+          <img src="asset/go.png" />
           <h3>Connect to BSC Mainnet to mint</h3>
           <br />
           <h3><i>1000 BUSD each Presale NFT </i></h3>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="panel right two">
-      <img src="https://aloycwl.github.io/rg_frontend/asset/footer.png" />
+      <img src="asset/footer.png" />
     </div>
   </body>
 </html>
