--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <body>
     <div class="panel left">
       <video loop muted autoplay playsinline>
-        <source src="asset/face.mp4" type="video/mp4" />
+        <source src="https://aloycwl.github.io/rg_frontend/asset/face.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="panel right">
       <div class="center">
         <button id="conBtn" onclick="connect()">Connect Wallet</button>
         <div id="root">
-          <img src="asset/go.png" />
+          <img src="https://aloycwl.github.io/rg_frontend/asset/go.png" />
           <h3>Connect to BSC Mainnet to mint</h3>
           <br />
           <h3><i>1000 BUSD each Presale NFT </i></h3>
@@ -57,7 +57,7 @@
     </div>
     <div class="panel right two">
       <div class="center">
-        <img src="asset/footer.png" />
+        <img src="https://aloycwl.github.io/rg_frontend/asset/footer.png" />
       </div>
     </div>
   </body>
