--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body>
     <div class="panel left">
       <video loop muted autoplay playsinline>
-        <source src="https://aloycwl.github.io/rg_frontend/asset/face.mp4" type="video/mp4" />
+        <source
+          src="https://aloycwl.github.io/rg_frontend/asset/face.mp4"
+          type="video/mp4"
+        />
       </video>
     </div>
     <div class="panel right">
@@ -56,9 +59,7 @@
       </div>
     </div>
     <div class="panel right two">
-      <div class="center">
-        <img src="https://aloycwl.github.io/rg_frontend/asset/footer.png" />
-      </div>
+      <img src="https://aloycwl.github.io/rg_frontend/asset/footer.png" />
     </div>
   </body>
 </html>
