--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="panel right two">
-      <img src="asset/footer.png" />
+      <img class="center" src="asset/footer.png" />
     </div>
   </body>
 </html>
