--- a/index.html
+++ b/index.html
@@ -15,20 +15,17 @@
   <body>
     <div class="panel left">
       <video loop muted autoplay playsinline>
-        <source
-          src="https://aloycwl.github.io/rg_frontend/asset/face.mp4"
-          type="video/mp4"
-        />
+        <source src="https://readygo.world//asset/face.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="panel right">
       <div class="center">
         <button id="conBtn" onclick="connect()">Connect Wallet</button>
+        <img src="https://readygo.world//asset/go.png" />
+        <h3>Connect to BSC Mainnet to mint</h3>
+        <br />
+        <h3><i>1000 BUSD each Presale NFT </i></h3>
         <div id="root">
-          <img src="https://aloycwl.github.io/rg_frontend/asset/go.png" />
-          <h3>Connect to BSC Mainnet to mint</h3>
-          <br />
-          <h3><i>1000 BUSD each Presale NFT </i></h3>
           <button onclick="adjust(-1)" class="adjust">-</button>
           <input id="txtNo" value="1" />
           <button onclick="adjust(1)" class="adjust">+</button> <br />
@@ -58,7 +55,7 @@
       </div>
     </div>
     <div class="panel right two">
-      <img class="center" src="https://aloycwl.github.io/rg_frontend/asset/footer.png" />
+      <img class="center" src="https://readygo.world//asset/footer.png" />
     </div>
   </body>
 </html>
