--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <body>
     <div class="panel left">
       <video loop muted autoplay playsinline>
-        <source src="https://readygo.world//asset/face.mp4" type="video/mp4" />
+        <source src="https://readygo.world/asset/face.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="panel right">
       <div class="center">
-        <img src="https://readygo.world//asset/go.png" />
+        <img src="https://readygo.world/asset/go.png" />
         <h3>Connect to BSC Mainnet to mint</h3>
         <br />
         <h3><i>1000 BUSD each Presale NFT </i></h3>
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="panel right two">
-      <img class="center" src="https://readygo.world//asset/footer.png" />
+      <img class="center" src="https://readygo.world/asset/footer.png" />
     </div>
   </body>
 </html>
