--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h3>Connect to BSC Mainnet to mint</h3>
         <br />
         <h3><i>1000 BUSD each Presale NFT </i></h3>
+        <h3 id="left"></h3>
         <button id="conBtn" onclick="connect()">Connect Wallet</button>
         <div id="root">
           <button onclick="adjust(-1)" class="adjust">-</button>
