--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <br />
         <button id="conBtn" onclick="connect()">Connect Wallet</button>
         <div id="root">
-          <h3 id="left">NFT left to grab!</h3>
+          <h3 id="left" class="colorRed">NFT left to grab!</h3>
           <button onclick="adjust(-1)" class="adjust">-</button>
           <input id="txtNo" value="1" />
           <button onclick="adjust(1)" class="adjust">+</button> <br />
           <button id="mintBtn" onclick="mint()">Presale Mint</button>
           <h3 class="heightPad">
-            Unclaimed RG Token: <span id="txtRG">00.00</span>
+            Unclaimed RG Token: <span id="txtRG">0.0</span>
           </h3>
           <button id="claimbtn" onclick="drip()">Claim</button><br />
           <br />
