--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <h3 class="heightPad">
             Unclaimed RG Token: <span id="txtRG">0.0</span>
           </h3>
-          <button id="claimbtn" onclick="drip()" disabled><i>Claim (Coming soon)</i></button><br />
+          <button id="claimbtn" onclick="drip()">
+            <i>Claim (Coming soon)</i></button
+          ><br />
           <br />
           <button id="txtRef" onclick="copy()">Copy Your Referral Link</button>
         </div>
