--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <link rel="stylesheet" href="asset/rg.css" />
   </head>
   <body>
-    <div class="topright"><a href="" target="_blank">twitter</a> <a href="" target="_blank">element</a></div>
+    <div class="topright">
+      <a href="https://twitter.com/ReadyGoToken" target="_blank">twitter</a>
+      <a
+        href="https://testnets.element.market/collections/readygo2022"
+        target="_blank"
+        >element</a
+      >
+    </div>
     <div class="panel left">
       <video loop muted autoplay playsinline>
         <source src="https://readygo.world/asset/face.mp4" type="video/mp4" />
