--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="topright">
-      <a href="https://twitter.com/ReadyGoToken" target="_blank">twitter</a>
+      <button href="https://twitter.com/ReadyGoToken" target="_blank">twitter</button>
       <a
         href="https://testnets.element.market/collections/readygo2022"
         target="_blank"
