--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div class="topright">
-      <button href="https://twitter.com/ReadyGoToken" target="_blank">twitter</button>
+      <a href="https://twitter.com/ReadyGoToken" target="_blank"><img src="https://readygo.world/asset/twitter.png"></a>
       <a
         href="https://testnets.element.market/collections/readygo2022"
         target="_blank"
-        >element</a
+        ><img src="https://readygo.world/asset/element.png"></a
       >
     </div>
     <div class="panel left">
