--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   </head>
   <body>
     <div class="topright">
-      <a href="https://twitter.com/ReadyGoToken" target="_blank"><img src="https://readygo.world/asset/twitter.png"></a>
-      <a
+      <a href="https://twitter.com/ReadyGoToken" target="_blank"
+        ><img src="https://readygo.world/asset/twitter.png" /></a
+      ><a
         href="https://testnets.element.market/collections/readygo2022"
         target="_blank"
-        ><img src="https://readygo.world/asset/element.png"></a
-      >
+        ><img src="https://readygo.world/asset/element.png"
+      /></a>
     </div>
     <div class="panel left">
       <video loop muted autoplay playsinline>
