--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://twitter.com/ReadyGoToken" target="_blank"
         ><img src="https://readygo.world/asset/twitter.png" /></a
       ><a
-        href="https://testnets.element.market/collections/readygo2022"
+        href="https://www.element.market/account/0xd7d434997cf41b06baabd614bfae6cc3f7a19086"
         target="_blank"
         ><img src="https://readygo.world/asset/element.png"
       /></a>
