--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h3 class="heightPad">
             Unclaimed RG Token: <span id="txtRG">0.0</span>
           </h3>
-          <button id="claimbtn" onclick="drip()">
+          <button id="claimbtn" onclick="drip()" disabled>
             <i>Claim (Coming soon)</i></button
           ><br />
           <br />
